Fixed margins between cards on mobile site

--- a/m/style.css
+++ b/m/style.css
@@ -56,7 +56,7 @@ a:hover {
   margin-top: 260px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 280px;
+  margin-bottom: 240px;
   padding-right: 1px;
 }
 
@@ -66,6 +66,7 @@ a:hover {
   display: block;
   width: 600px;
   height: 600px;
+  margin-top: 80px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 260px;
